Add forks info to the API
